Prevent form line horizontal overflow

--- a/euis-components/src/styles/cs2-form-style.scss
+++ b/euis-components/src/styles/cs2-form-style.scss
@@ -50,6 +50,7 @@
     border-radius: 4rem;
     font-size: var(--fontSizeM);
     display: flex;
+    max-width: 100%;
 }
 
 .cs2-fieldStyle2:hover {
